Edited current solution

--- a/BFS/Sum_of_nodes_with_even_valued_grandparent.ipynb
+++ b/BFS/Sum_of_nodes_with_even_valued_grandparent.ipynb
@@ -29,6 +29,26 @@
     "        If the grandparent of the current node is even-valued, add the value of this node to the answer.\n",
     "        \"\"\"\n",
     "\n",
+    "        #Faster\n",
+    "        res = []\n",
+    "\n",
+    "        def dfs(node, parent, grandparent):\n",
+    "            if grandparent:\n",
+    "                if grandparent.val%2==0:\n",
+    "                    res.append(node.val)\n",
+    "            if node.left:\n",
+    "                dfs(node.left, node, parent)\n",
+    "            if node.right:\n",
+    "                dfs(node.right, node, parent)\n",
+    "\n",
+    "        dfs(root, None, None)\n",
+    "\n",
+    "        return sum(res)\n",
+    "\n",
+    "        \n",
+    "\n",
+    "        \"\"\"\n",
+    "        BFS, non-efficient method\n",
     "        queue = []\n",
     "        res = 0\n",
     "        queue.append(root)\n",
@@ -52,6 +72,7 @@
     "                if node.right:\n",
     "                    queue.append(node.right)\n",
     "        return res\n",
+    "        \"\"\"\n",
     "\n",
     "        "
    ]
