--- a/Playground.ipynb
+++ b/Playground.ipynb
@@ -68,6 +68,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['', '1', '2']\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp = \",1,2\"\n",
+    "\n",
+    "print(temp.split(\",\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
